# gorm/models/core.go
@@ -3,38 +3,26 @@ package models
 import (
 	"fmt"
 	"log"
+	"os"
 	"time"
 
-	"gopkg.in/ini.v1"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"gorm.io/gorm/logger"
-	"lin.com/im/utils"
 )
 
 var DB *gorm.DB
 
 func init() {
-	// 读取配置文件
-	cfg, errIni := ini.Load("../conf/app.ini")
+	username := "root"
+	password := "024680"
+	host := "192.168.0.103"
+	port := "3306"
+	database := "go_test"
 
-	if errIni != nil {
-		log.Panicln(errIni)
-	}
-	// 获取MySQL配置
-	mysqlConf := cfg.Section("mysql")
-
-	username := mysqlConf.Key("username").String()
-	password := mysqlConf.Key("password").String()
-	host := mysqlConf.Key("host").String()
-	port := mysqlConf.Key("port").String()
-	database := mysqlConf.Key("database").String()
-
-	// 连接数据库
 	dsn := fmt.Sprintf("%v:%v@tcp(%v:%v)/%v?charset=utf8mb4&parseTime=True&loc=Local", username, password, host, port, database)
-
 	dbLogger := logger.New(
-		utils.LogInfo,
+		log.New(os.Stdout, "INFO", log.LstdFlags|log.Lshortfile), // io writer
 		logger.Config{
 			SlowThreshold: time.Second, // 慢 SQL 阈值
 			LogLevel:      logger.Info, // 日志级别
